# fanic

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  eslint.config.mjs  justfile  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  settings.toml  static  theme_example.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: autopep695.yml  comicinfo-xsd.yml  frontend-eslint.yml  frontend-prettier.yml  frontend-typescript.yml  pyupgrade.yml  ruff.yml
examples/: ComicInfo.xml  theme_example.toml
frontend/: comic-upload-progress.ts  reader.ts  user-menu.ts  work-edit.ts
runtime/: fanic.db
scripts/: fanic.service  rebuild-thumbnails.py  relocate-storage-ubuntu.sh  relocate-storage-windows.ps1  set-source-permissions.sh  setup-nginx-ubuntu.sh  setup-nginx-windows.ps1  sync-static-from-storage.sh  validate_comicinfo_xsd.py
src/fanic/: __init__.py  __main__.py  app.py  auth0_client.py  clip_backend.py  cylinder_main.py  db.py  fanart.py  ingest.py  ingest_progress.py  main.py  moderation.py  nsfw_detector.py  paths.py  py.typed  repository.py  settings.py  style_classifier.py  utils.py
static/: comic-upload-progress.js  ingest-upload-progress.js  reader.js  styles.css  user-menu.js  work-edit.js
tests/: conftest.py  test_api_works_get.py  test_api_works_post.py  test_clip_backend.py  test_comic_upload_page_rendering.py  test_comic_upload_progress_js_routes.py  test_common_theme_injection.py  test_common_utilities.py  test_cylinder_main.py  test_db_module.py  test_fanart_upload_page_rendering.py  test_ingest_helpers.py  test_ingest_progress.py  test_moderation_lazy_init.py  test_moderation_media.py  test_profile_theme_routes.py  test_reader_js_routes.py  test_repository_coverage.py  test_routes_account_logout.py  test_routes_auth0_login.py  test_routes_auth_callback.py  test_routes_comic_upload_post.py  test_routes_dmca.py  test_routes_fanart_post.py  test_routes_home_and_work.py  test_routes_notification.py  test_routes_reports.py  test_routes_reports_post.py  test_routes_users_admin.py  test_routes_verify_email.py  test_routes_work_edit_post.py  test_routes_work_notifications.py  test_style_and_nsfw_branches.py  test_wsgi_integration.py
typings/co3/: ingest.pyi  repository.pyi
typings/cylinder/: __init__.pyi
typings/lazi/: auto.pyi
typings/open_clip/: __init__.pyi  (+20 more)
(+146 files in other folders)
