[project]
name = "fanic"
version = "0.1.0"
description = "FANIC: Fan Archive Nexus for Illustrated Comics"
readme = "README.md"
authors = [
    { name = "rbroderi", email = "richard.broderick@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.3.0",
    "cylinder>=0.1.0",
    "pillow-avif-plugin>=1.4.6",
    "python-dotenv>=1.0.1",
    "pillow>=11.3.0",
    "rust-just>=1.47.1",
    "waitress>=3.0.0",
    "tomli-w>=1.2.0",
    "open-clip-torch>=3.3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "pathvalidate>=3.3.1",
]

[project.scripts]
fanic = "fanic.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
